--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
 
 0.60      2024-09-29
   - avoid deprecated smartmatch for most tests [GH #29, Graham Knop]
+  - avoid smartmatch operator overloading after 5.41.2 [RT#155839]
 
 0.59      2023-07-24
   - don't use warnings.pm inside Safe container [GH #28, Graham Knop]
